# hack_rkn

./: .gitignore  FAST_classificator.py  FINAL_train.py  README.md  SAMPLEE.ipynb  Untitled.ipynb  check_onnx_worker.ipynb  classifier_finetune.ipynb  docker-compose.yml  init.sql  sreen_extract.ipynb  train_vitclassifier.ipynb
.github/workflows/: docker-image.yml
app/: Dockerfile  classes.json  classificator.py  db.py  download_script.py  index.py  main.py  model.py  pyproject.toml  slow_classificator.py
app/routers/: __init__.py  image_work.py  parse_form_scrinshot.py  parser_by_content.py  search.py
frontend/: Dockerfile  nginx.conf
gradio/: croper.py  main.py  pyproject.toml
gradio/.gradio/flagged/: dataset1.csv  dataset2.csv
src/: App.css  App.jsx  Parser.css  Parser.jsx
